# MiAM_robotics_Pico

./: .gitmodules  CMakeLists.txt
miam_utils_pico/include/: L298N.h  Types.h
miam_utils_pico/include/drivers/: L298N.h  NRF24.h  Servo.h
miam_utils_pico/include/trajectory/: ArcCircle.h  DrivetrainKinematics.h  PointTurn.h  RobotPosition.h  SampledTrajectory.h  StraightLine.h  ThreeWheelsKinematics.h  Trapezoid.h  Utilities.h
miam_utils_pico/src/: L298N.cpp  NRF24.cpp  PID.cpp  Servo.cpp
miam_utils_pico/src/drivers/: L298N.cpp  NRF24.cpp  Servo.cpp
miam_utils_pico/src/trajectory/: ArcCircle.cpp  DrivetrainKinematics.cpp  PointTurn.cpp  RobotPosition.cpp  SampledTrajectory.cpp  StraightLine.cpp  ThreeWheelsKinematics.cpp  Trajectory.cpp  Trapezoid.cpp  Utilities.cpp
remote/: main.cpp
robot/: main.cpp
robot_l298n/: main.cpp
